<resources>
    <string name="app_name">ToDo</string>


    <!-- ####### Login ###### -->
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="password">Password</string>

    <!-- ####### Add User ###### -->
    <string name="create">Create</string>
    <string name="title_activity_add_entry">Add User</string>

    <!-- ####### Add Note ###### -->
    <string name="selectTime">Select Time</string>

    <!-- ####### ToDoList ###### -->
    <string name="note">...</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="deadline">Deadline</string>
    <string name="important">important</string>
    <string name="done">done</string>
    <string name="acc_settings">account settings</string>

    <!-- ####### ToDoList - Contextmenu ###### -->
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_mark">Mark as important</string>

    <!-- ####### AccountSettings ###### -->
    <string name="user_management">User Management</string>
    <string name="change_password">change password</string>
    <string name="current_password">current password</string>
    <string name="new_password">new password</string>
    <string name="title_activity_account_settings">Account Settings</string>

    <!-- ####### Usermanagement ###### -->
    <string name="addUser">Add User</string>
</resources>
