<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:columnCount="2"
    android:rowCount="7"
    android:columnWidth="100dp"
    android:orientation="vertical">

    <EditText
        android:layout_width="fill_parent"
        android:id="@+id/etName"
        android:layout_row="0"
        android:layout_column="0"
        android:lines="1"
        android:maxLines="25"
        android:hint="@string/name"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/etNote"
        android:layout_row="1"
        android:layout_column="0"
        android:lines="3"
        android:maxLines="25"
        android:hint="@string/note"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectTime"
        android:id="@+id/bSelectTime"
        android:layout_row="4"
        android:layout_column="0" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/bCreate"
        android:layout_row="5"
        android:layout_column="0"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/bCancel"
        android:layout_row="6"
        android:layout_column="0"
        />

    <CheckBox
        android:id="@+id/cbImportant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/important"
        android:onClick="onCheckboxClicked"
        android:layout_row="3"
        android:layout_column="0"/>

    <CheckBox
        android:id="@+id/cbDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:onClick="onCheckboxClicked"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_marginLeft="120dp"/>
</GridLayout>
