<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:rowCount="5">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bChangePassword"
        android:layout_row="0"
        android:text="@string/change_password"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bUserManagement"
        android:layout_row="4"
        android:text="@string/user_management"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/etPassword"
        android:layout_row="1"
        android:layout_column="0"
        android:hint="@string/current_password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/etNewPassword"
        android:layout_row="2"
        android:layout_column="0"
        android:hint="@string/new_password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/etNewPasswordVerify"
        android:layout_row="3"
        android:layout_column="0"
        android:hint="@string/new_password" />


    // delete..

</GridLayout>